# asci_dynamical_systems

./: .gitignore  CMakeLists.txt
include/: asci_plotter.hpp  dynamical_systems.hpp  integrators.hpp  mesh_generator.hpp
src/: asci_lorenz.cpp  asci_plotter.cpp  dynamical_systems.cpp  integrators.cpp  mesh_generator.cpp  test.cpp
